<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonAddValues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adicionar_valores"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/buttonAddWeights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adicionar_pesos"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular_m_dia"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/buttonHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ajuda"/>
</LinearLayout>
