<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/buttonMediaAritmetica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ajuda_m_dia_aritm_tica"/>

    <Button
        android:id="@+id/buttonMediaPonderada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ajuda_m_dia_ponderada"/>

    <Button
        android:id="@+id/buttonMediaHarmonica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ajuda_m_dia_harm_nica"/>
</LinearLayout>
