<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/digite_um_valor"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/buttonAdicionarValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adicionar_valor"/>

    <Button
        android:id="@+id/buttonLimparValores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limpar_lista"
        android:layout_marginTop="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewValores"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>
