<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_um_peso"
        android:inputType="numberDecimal"
        android:textColorHint="#8D6E63" />

    <Button
        android:id="@+id/buttonAdicionarPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adicionar_peso" />

    <Button
        android:id="@+id/buttonLimparPesos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limpar_lista"
        android:layout_marginTop="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPesos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
